syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.libcotshrink.protobufs;

option java_outer_classname = "ProtobufSensor";

message Sensor {
  int32 fovGreen = 1;
  int32 fovBlue = 2;
  int32 fovRed = 3;
  int32 range = 4;
  int32 azimuth = 5;
  int32 displayMagneticReference = 6;
  int32 fov = 7;
  bool hideFov = 8; // TODO: can be packed into customBytes
  int32 fovAlpha = 9;
}
